syntax = "proto2";
package message.order;
//订单操作
message OrderPayRes
{
    required string order_number = 1; //订单编号
    required string pintuan_id = 2; //拼团id
    required string order_type = 3; //订单类型
    required int64 user_id = 4;//用户id
}
